--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --secondary-color: #2980b9;
   --accent-color: #2ecc71;
   --light-bg: #EAF2FA;
-  --dark-bg: #222831;
+  --dark-bg: #0E1116;
   --success: #27ae60;
   --error: #e74c3c;
   --panel-background: #f8f8f8;
