--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h2::after {
 }
 /* ========== Panels ========== */
 .input-panel, .preview-panel, .output-panel {
-  background: white;
+  background: linear-gradient( #DCF0FF, #AAC8E6);
   border-radius: 10px;
   padding: 25px;
   box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);
@@ -327,7 +327,7 @@ body.dark-theme {
 body.dark-theme .input-panel,
 body.dark-theme .preview-panel,
 body.dark-theme .output-panel {
-  background-image: linear-gradient( #102653, #0B1223);
+  background-image: linear-gradient( #102653, #0F152B);
   border: 1px solid rgba(255, 255, 255, 0.2);
   box-shadow: 0 0 8px 1px rgba(16, 38, 83, 0.8);
 }
@@ -471,9 +471,7 @@ body.dark-theme .story-section blockquote {
   p {
     font-size: 1.3rem;
   }
-  li {
-    font-size: 1.2rem;
-  }
+  li,
   h4 {
     font-size: 1.2rem;
   }
